[package]
name = "sled-record-derive"
version = "0.1.0"
authors = ["Tom Houlé <tom@tomhoule.com>"]
edition = "2018"

[lib]
proc-macro = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
syn = { version = "1.0.14", features = ["derive"] }
proc-macro2 = "1.0.8"
quote = "1.0.2"
