[package]
name = "sled-record"
version = "0.1.0"
authors = ["Tom Houlé <tom@tomhoule.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bincode = "1.2.1"
sled = "0.31.0"
sled-record-derive = { path = "../sled-record-derive" }

[dev-dependencies]
serde = { version = "1", features = ["derive"] }
